--- a/src/components/settings-dialog/settings-dialog.scss
+++ b/src/components/settings-dialog/settings-dialog.scss
@@ -69,18 +69,28 @@
     border: 0;
     padding: 0;
     margin: 0;
-    position: fixed;
-    top: -400px;
-    right: 0;
     width: 696px;
+    max-width: 90%;
     height: 593px;
-    transform: translate(-25%, -50%);
+    max-height: 90%;
+  }
+
+  .dialog-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 32px;
+    border-bottom: 1px solid var(--border-stroke);
+
+    h3 {
+      margin: 0;
+    }
   }
 
   .dialog-container {
     box-sizing: border-box;
     padding: 32px;
-    max-height: 100%;
+    max-height: calc(100% - 60px);
     overflow-y: auto;
     overflow-x: hidden;
   }
@@ -171,5 +181,52 @@
       background: var(--Neutral-20);
       outline: none;
     }
+  }
+}
+
+.settings-dialog-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+
+  .dialog {
+    font-family: "Space mono";
+    background: var(--Neutral-5);
+    border-radius: 18px;
+    color: var(--Neutral-80);
+    border: 0;
+    padding: 0;
+    margin: 0;
+    width: 696px;
+    max-width: 90%;
+    height: 593px;
+    max-height: 90%;
+  }
+
+  .dialog-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 32px;
+    border-bottom: 1px solid var(--border-stroke);
+
+    h3 {
+      margin: 0;
+    }
+  }
+
+  .dialog-container {
+    box-sizing: border-box;
+    padding: 32px;
+    max-height: calc(100% - 60px);
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 }
