--- a/src/components/control-tray/control-tray.scss
+++ b/src/components/control-tray/control-tray.scss
@@ -121,19 +121,19 @@
     color: var(--Neutral-30);
   }
 
+  .connection-button-container {
+    border-radius: 27px;
+    border: 1px solid var(--Neutral-30);
+    background: var(--Neutral-5);
+    padding: 10px;
+  }
+
   .connection-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 4px;
-
-    .connection-button-container {
-      border-radius: 27px;
-      border: 1px solid var(--Neutral-30);
-      background: var(--Neutral-5);
-      padding: 10px;
-    }
 
     .text-indicator {
       font-size: 11px;
@@ -180,5 +180,15 @@
 
   100% {
     opacity: 0.9;
+  }
+}
+
+.stop-button {
+  background-color: var(--accent-red);
+  color: var(--Neutral-5);
+
+  &:hover {
+    background-color: var(--Red-400);
+    border-color: var(--Neutral-20);
   }
 }
