--- a/src/components/settings-page/settings-page.scss
+++ b/src/components/settings-page/settings-page.scss
@@ -31,6 +31,12 @@
     text-align: center;
     margin-bottom: 2rem;
 
+    .user-avatar {
+      border-radius: 50%;
+      margin-bottom: 1rem;
+      object-fit: cover;
+    }
+
     h3 {
       font-size: 1.5rem;
       font-weight: 600;
@@ -85,6 +91,11 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 30px;
+  }
+
+  .voice-icon {
+    border-radius: 50%;
+    object-fit: cover;
   }
 }
 
